# shmipc-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  README_CN.md  _typos.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  dependency-review.yaml
benches/: bench.rs
examples/: Cargo.toml
examples/src/hello_world/: greeter_client.rs  greeter_client_tokio.rs  greeter_server.rs  greeter_server_tokio.rs
scripts/: selftest.sh
src/: compact.rs  config.rs  consts.rs  error.rs  lib.rs  listener.rs  queue.rs  stats.rs  stream.rs  transport.rs  util.rs
src/buffer/: buf.rs  linked.rs  list.rs  manager.rs  mod.rs  slice.rs
src/protocol/: adapter.rs  block_io.rs  event.rs  header.rs  mod.rs
src/protocol/initializer/: mod.rs  v2.rs  v3.rs
src/session/: config.rs  ext.rs  manager.rs  mod.rs  pool.rs
src/util/: buf_reader.rs  mod.rs  shmbuf_reader.rs
tests/: test.rs
