[package]
name = "shmipc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo = "0.10"
motore = "0.4"

anyhow = "1"
async-trait = "0.1"
arc-swap = "1"
bytes = "1"
fs2 = "0.4"
futures = "0.3"
memmap2 = "0.9"
nix = { version = "0.29", features = ["fs"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
pin-project = "1"
socket2 = { version = "0.5", features = ["all"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
rand = "0.9"
tokio-scoped = "0.2"
tracing-subscriber = "0.3"


[profile.dev]
overflow-checks = false

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[workspace]
members = ["examples"]

[[bench]]
name = "bench"
harness = false
