[package]
name = "shmipc"
version = "0.1.1"
edition = "2024"
authors = ["Volo Team <volo@cloudwego.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cloudwego/shmipc-rs"
description = "Shared memory IPC for Rust"
documentation = "https://docs.rs/shmipc"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "network", "ipc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arc-swap = "1"
bytes = "1"
fs2 = "0.4"
futures = "0.3"
libc = "0.2"
memmap2 = "0.9"
nix = { version = "0.30", features = ["feature", "fs", "socket", "uio"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
pin-project = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
futures = "0.3"
rand = "0.9"
tokio-scoped = "0.2"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
codegen-units = 1
panic = 'unwind'

[workspace]
members = ["examples"]

[[bench]]
name = "bench"
harness = false
