[package]
name = "examples"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.30", features = ["fs"] }
shmipc = { path = "../" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[[bin]]
name = "greeter_client"
path = "src/hello_world/greeter_client.rs"

[[bin]]
name = "greeter_client_tokio"
path = "src/hello_world/greeter_client_tokio.rs"

[[bin]]
name = "greeter_server"
path = "src/hello_world/greeter_server.rs"

[[bin]]
name = "greeter_server_tokio"
path = "src/hello_world/greeter_server_tokio.rs"
